Ensure dropdown filters do not overlap on small screens
This also tweaks the layout of the case list page to utilise more
of the screen width at tablet size.

https://dsdmoj.atlassian.net/browse/SAS-668

--- a/assets/scss/components/_filters.scss
+++ b/assets/scss/components/_filters.scss
@@ -1,5 +1,12 @@
 @use "govuk-frontend/dist/govuk" as *;
 
+.sas-filters {
+  & select {
+    width: 100%;
+    min-width: 100%;
+  }
+}
+
 .sas-filters__actions {
   display: flex;
   align-items: center;
